--- a/Python Basics/8.Regular Expression/RegEx.ipynb
+++ b/Python Basics/8.Regular Expression/RegEx.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "255.14285714285714"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "['123']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1327,27 +1327,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('S~*ject has Uber booked already', 1)\n",
+      "('~* has Uber booked already', 1)\n",
       "('S~*ject has ~*er booked already', 2)\n"
      ]
     }
    ],
    "source": [
-    "print(re.subn('ub', '~*', 'Subject has Uber booked already'))\n",
+    "print(re.subn('Subject', '~*', 'Subject has Uber booked already'))\n",
     "t = re.subn('UB', '~*', 'Subject has Uber booked already',flags=re.IGNORECASE)\n",
     "print(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1456,7 @@
        "['Note 1 - Overview', 'Note 2 - Summary of Significant Accounting Policies']"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1489,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1498,7 @@
        "['1', '2021', '19', '2', '30', '2021', '30', '2021', '2020', '31', '2020']"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
        "['September 30, 2021', 'December 31, 2020']"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,14 +1531,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['2021', '2020', '2022']\n"
+      "['2021', '2021', '2021', '2020', '2020']\n"
      ]
     }
    ],
@@ -1549,16 +1549,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['2021', '2020', '2022']"
+       "['2021', '2021', '2021', '2020', '2020']"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1651,18 +1651,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fitz\n",
     "import re\n",
+    "import csv\n",
     "# pip install pymupdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1862,12 +1863,18 @@
     "EPD[\"Ph No\"] = re.findall(ph_pattern, text)\n",
     "EPD[\"Date\"] = re.findall(date_pattern, text)\n",
     "\n",
-    "print(EPD)"
+    "print(EPD)\n",
+    "\n",
+    "with open('EPD.csv', 'w') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow(EPD.keys())\n",
+    "    \n",
+    "    writer.writerows(zip(*EPD.values()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1887,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1912,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1937,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1962,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1975,7 +1982,7 @@
    ],
    "source": [
     "# Find all strings that contain only digits\n",
-    "digits_pattern = r'^\\d+$'\n",
+    "digits_pattern = r'\\d{6}+'\n",
     "\n",
     "only_digits = []\n",
     "for s in mixed_strings:\n",
@@ -1987,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2012,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
