--- a/Python Oops/Python Oops.ipynb
+++ b/Python Oops/Python Oops.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
    "source": [
     "class person:\n",
     "    def __init__(self, name, age):\n",
-    "        self.__name = name\n",
+    "        self.__name = name #pravite atribute\n",
     "        self.__age = age\n",
     "\n",
     "    def displayname(self):\n",
