--- a/Numpy/Numpy.ipynb
+++ b/Numpy/Numpy.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
     "size_numpy_array = numpy_array.nbytes\n",
     "\n",
     "print(f\"Size of Python list: {size_python_list} bytes\")\n",
-    "print(f\"Size of NumPy array: {size_numpy_array} bytes\")\n"
+    "print(f\"Size of NumPy array: {size_numpy_array} bytes\")"
    ]
   },
   {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -324,34 +324,34 @@
        "array([0, 2, 4, 6, 8])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr1 = np.arange(0, 10, 2) \n",
+    "arr1 = np.arange(0, 10, 2, dtype='int') \n",
     "arr1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.,  2.,  4.,  6.,  8., 10.])"
+       "array([0, 2, 5, 7])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr2 = np.linspace(0, 10, num=6)  # Creates array: [ 0.,  2.5,  5.,  7.5, 10.]\n",
+    "arr2 = np.linspace(0, 10, num=4, dtype='int', endpoint=False)  # Creates array: [ 0.,  2.5,  5.,  7.5, 10.]\n",
     "arr2"
    ]
   },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -414,8 +414,27 @@
    ],
    "source": [
     "arr3 = np.array([5, 8, 12])\n",
-    "\n",
     "print(arr3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr3.shape"
    ]
   },
   {
@@ -431,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -482,8 +501,27 @@
    "source": [
     "# create a 2D array with shape (3, 4)\n",
     "arr5 = np.array([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])\n",
-    "\n",
     "print(arr5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 4)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr5.shape"
    ]
   },
   {
@@ -497,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -513,13 +551,12 @@
    "source": [
     "# create a 2D array with shape (3, 4)\n",
     "arr6 = np.zeros((3,4), dtype=int)\n",
-    "\n",
     "print(arr6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -535,9 +572,7 @@
    "source": [
     "# create a 2D array with shape (3, 4)\n",
     "shape = (3, 4)\n",
-    "\n",
     "arr7 = np.ones(shape, dtype='int')\n",
-    "\n",
     "print(arr7)"
    ]
   },
@@ -550,16 +585,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4128860 6029375 3801155 5570652]\n",
-      " [6619251 7536754 4259932 7143524]\n",
-      " [7209065 4259932 7340144 6357060]]\n"
+      "[[          0           0           0           0]\n",
+      " [          0           0           0           0]\n",
+      " [          0           0  8589934593 17179869187]]\n"
      ]
     }
    ],
    "source": [
     "# create a 2D array with shape (3, 4)\n",
     "arr8 = np.empty((3,4), dtype=int)\n",
-    "\n",
     "print(arr8)"
    ]
   },
@@ -618,26 +652,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(2, 3, 4)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# create a 3D array with shape (2, 3, 4)\n",
-    "shape = (2, 3, 4)\n",
-    "\n",
-    "arr11 = np.zeros(shape)\n",
-    "\n",
-    "print(arr11)"
+    "arr9.shape"
    ]
   },
   {
@@ -649,21 +675,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[1. 1. 1. 1.]\n",
-      "  [1. 1. 1. 1.]]\n",
+      "[[[0 0 0 0]\n",
+      "  [0 0 0 0]\n",
+      "  [0 0 0 0]]\n",
       "\n",
-      " [[1. 1. 1. 1.]\n",
-      "  [1. 1. 1. 1.]]]\n"
+      " [[0 0 0 0]\n",
+      "  [0 0 0 0]\n",
+      "  [0 0 0 0]]]\n"
      ]
     }
    ],
    "source": [
     "# create a 3D array with shape (2, 3, 4)\n",
-    "shape = (2, 2, 4)\n",
+    "shape = (2, 3, 4)\n",
     "\n",
-    "arr12 = np.ones(shape)\n",
+    "arr11 = np.zeros(shape, dtype='int')\n",
     "\n",
-    "print(arr12)"
+    "print(arr11)"
    ]
   },
   {
@@ -675,13 +703,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]]\n",
+      "[[[1 1 1 1]\n",
+      "  [1 1 1 1]]\n",
       "\n",
-      " [[0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]]]\n"
+      " [[1 1 1 1]\n",
+      "  [1 1 1 1]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a 3D array with shape (2, 3, 4)\n",
+    "shape = (2, 2, 4)\n",
+    "\n",
+    "arr12 = np.ones(shape, dtype='int')\n",
+    "\n",
+    "print(arr12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[      1732990713656                 149                   0\n",
+      "                     0]\n",
+      "  [  18296268623183872 4189022085447885435 7018141364393288224\n",
+      "   2325039521791501684]\n",
+      "  [7599578601909023329 7309449296458311796 2318284121462417440\n",
+      "   8097868449970923828]]\n",
+      "\n",
+      " [[2318283056109920357 6660362230965480498 4404575623523230062\n",
+      "   8315173710809034272]\n",
+      "  [2318339441533940520 7577092403962147940 7952352384135951470\n",
+      "   8241913273598440048]\n",
+      "  [2459013921775956338 8028075858292209765 2482730745246998382\n",
+      "     12948386608193594]]]\n"
      ]
     }
    ],
@@ -689,7 +749,7 @@
     "# create a 3D array with shape (2, 3, 4)\n",
     "shape = (2, 3, 4)\n",
     "\n",
-    "arr13 = np.empty(shape)\n",
+    "arr13 = np.empty(shape, dtype='int')\n",
     "\n",
     "print(arr13)"
    ]
@@ -707,23 +767,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.53166839, 0.71590418, 0.15397274],\n",
-       "       [0.14508726, 0.65081946, 0.29640424]])"
+       "array([[0.53378571, 0.24260479, 0.50192396],\n",
+       "       [0.10615411, 0.93823936, 0.91654895],\n",
+       "       [0.70850559, 0.93553018, 0.81806807]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "random_numbers = np.random.rand(2,3)  # Generates a 2x3 array of random numbers between 0 and 1\n",
+    "random_numbers = np.random.rand(3,3)  # Generates a 2x3 array of random numbers between 0 and 1\n",
     "random_numbers"
    ]
   },
@@ -767,17 +828,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  7,  -9,  -5],\n",
-       "       [-10,   5,  -3]])"
+       "array([[-4,  0, -4],\n",
+       "       [ 9,  6,  9]], dtype=int32)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +866,7 @@
        "array([  2,   4,  56, 422,  32,   1])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +887,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,22 +899,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2., 3., 4., 5., 6., 7., 8., 9.])"
+       "array([2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.arange(2, 10, dtype=float)"
+    "np.arange(2, 10, dtype=int)"
    ]
   },
   {
@@ -880,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -900,25 +961,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 3])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3] [1 2 3] [1 2 3]\n"
+     ]
     }
    ],
    "source": [
     "x = np.array([1,2,3])\n",
     "y = x \n",
     "z = np.copy(x)\n",
-    "z\n"
+    "print(x,y,z)\n"
    ]
   },
   {
@@ -970,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +1037,7 @@
        "array([11., 23., 44.])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,95 +1049,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True,  True,  True])"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ae = np.array([11,23,44], dtype = bool)\n",
-    "ae"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1.+2.j 3.+4.j 5.+6.j]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Creating an array with complex numbers\n",
-    "complex_array = np.array([1 + 2j, 3 + 4j, 5 + 6j])\n",
-    "print(complex_array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([11.+0.j, 23.+0.j, 44.+0.j])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "af = np.array([11,23,44], dtype = complex)\n",
-    "af"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 0],\n",
-       "       [0, 1]])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "i.astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([127, 128, 129], dtype=int64)"
+       "array([11, 23, 44])"
       ]
      },
      "execution_count": 37,
@@ -1088,8 +1064,28 @@
     }
    ],
    "source": [
-    "# numpy.arange creates arrays with regularly incrementing values. Check the documentation for complete information and examples.\n",
-    "np.array([127, 128, 129], dtype=np.int64)"
+    "ad.astype('int')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  3,  4,  5,  6,  7,  8, 10])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i = np.linspace(2,10,num=8, dtype=float)\n",
+    "i.astype(int)"
    ]
   },
   {
@@ -1102,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1108,30 @@
        "       [ 6,  7,  8,  9, 10]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re = np.arange(1,11)\n",
+    "re.reshape(2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8],\n",
+       "       [ 9, 10, 11, 12]])"
+      ]
+     },
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1140,7 @@
     "re = np.arange(1,11).reshape(5,2)\n",
     "re1 = np.arange(1,11).reshape(2,5)\n",
     "re2 = np.arange(1,13).reshape(3,4)\n",
-    "re1"
+    "re2"
    ]
   },
   {
@@ -1191,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1226,47 @@
    ],
    "source": [
     "re = np.arange(1,11).reshape(5,2)\n",
-    "re.size\n"
+    "re.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re2.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(re2)"
    ]
   },
   {
@@ -1220,23 +1279,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "4"
+       "8"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "re2 = np.arange(1,13).reshape(3,4)\n",
+    "print(re2)\n",
     "re2.itemsize #Memory occupied by the item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re3 = np.linspace(0,10, num=10)\n",
+    "re3.itemsize"
    ]
   },
   {
@@ -1257,12 +1347,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "z1 = np.arange(12).reshape(3,4)\n",
     "z2 = np.arange(12,24).reshape(3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z1"
    ]
   },
   {
@@ -1289,16 +1401,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1,  0,  1,  2,  3])"
+       "(array([3, 4, 5, 6, 7]),\n",
+       " array([ 2,  4,  6,  8, 10]),\n",
+       " array([-1,  0,  1,  2,  3]))"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,9 +1420,9 @@
    "source": [
     "arr1d = np.array([1,2,3,4,5])\n",
     "re_add = arr1d + 2\n",
-    "re_add = arr1d * 2\n",
-    "re_add = arr1d - 2\n",
-    "re_add"
+    "re_add1 = arr1d * 2\n",
+    "re_add2 = arr1d - 2\n",
+    "re_add, re_add1, re_add2"
    ]
   },
   {
@@ -4645,7 +4759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
